[gd_scene load_steps=3 format=3 uid="uid://2xo14anieto2"]

[ext_resource type="Texture2D" uid="uid://etq7tq5jmrvk" path="res://icon.svg" id="1_njftt"]
[ext_resource type="Script" path="res://Player.gd" id="2_dfxtv"]

[node name="Player" type="Sprite2D"]
z_index = 5
texture_filter = 1
texture = ExtResource("1_njftt")
offset = Vector2(0, -60)
script = ExtResource("2_dfxtv")
metadata/_edit_group_ = true

[node name="EastMarker" type="Marker2D" parent="."]
position = Vector2(100, 50)

[node name="NorthMarker" type="Marker2D" parent="."]
position = Vector2(100, -50)

[node name="WestMarker" type="Marker2D" parent="."]
position = Vector2(-100, -50)

[node name="SouthMarker" type="Marker2D" parent="."]
position = Vector2(-100, 50)
